--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "mathjs": "^11.8.0",
     "p5": "^1.6.0",
     "vue": "^2.6.14",
     "vue-p5": "^0.8.4",
